hotfixes: fixed overflow in userinfo section

--- a/blocks/head-profile/__userinfo/head-profile__userinfo.css
+++ b/blocks/head-profile/__userinfo/head-profile__userinfo.css
@@ -1,4 +1,5 @@
 .head-profile__userinfo {
+  max-width: 336px;
   padding: 0 0 0 30px;
   display: flex;
   flex-direction: column;
@@ -7,6 +8,7 @@
 
 @media screen and (max-width: 720px) {
   .head-profile__userinfo {
+    max-width: 282px;
     padding: 26px 0 0 0;
   }
 }
